2011-11-07  Romain Francois  <romain@r-enthusiasts.com>

	* include/Rcpp/internal/wrap.h: implemented wrap_dispatch_importer__impl
	for int64 and uint64, needed for RProtoBuf

2011-11-06  Romain Francois  <romain@r-enthusiasts.com>

	* include/Rcpp/modules/Module_generated_Pointer_method.h: added code to deal
	with const free "methods", e.g. OUT foo( const Class*, ...) in modules
	Before const_method could only deal with actual const methods of the class,
	e.g. OUT Class::foo( ... ) const 
	* include/Rcpp/modules/Module_generated_Pointer_CppMethod.h: idem
	* include/Rcpp/as.h: deal with as<int64_t> and as<uint64_t>
	* include/Rcpp/internal/export.h : deal with as< some_container<int64_t> >
	and as< some_container<uint64_t> > where some_container is some container
	that has iterators, e.g. std::vector

2011-10-31  Romain Francois  <romain@r-enthusiasts.com>

	* include/Rcpp/int64/int64_lite.h: handling int64_t and uint64_t types, 
	based on the int64 package
	* include/Rcpp/internal/wrap.h: new dispatch layers to handle int64_t, 
	uint64_t and containers of these
	* DESCRIPTION: new depending on int64

2011-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/iostream/Rostream.h (Rcpp): Added tentative patch
	for operator<< also contributed by Jelmer Ypma -- but kept commented
	out for now

2011-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/Rostream.cpp: Patch by Jelmer Ypma which adds a new device
	'Rcout' not unlike std::cout but uses Rprintf internally
	* src/Rstreambuf.cpp: Idem
	* include/include/Rcpp/iostream/Rostream.h: Idem
	* include/include/Rcpp/iostream/Rstreambuf.h: Idem
	* include/include/Rcpp.h:  Include new headers

	* inst/unitTests/runit.rcout.R: Added simple unit test

2011-09-29  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.7
        * inst/NEWS: Release 0.9.7
        * inst/include/Rcpp/config.h: Release 0.9.7
        * debian/*: Similarly updated for new release to Debian
