@@ -1,7 +1,7 @@
 #!/usr/bin/r -t
 # -*- mode: R; tab-width: 4 -*-
 #
-# Copyright (C) 2010	Dirk Eddelbuettel and Romain Francois
+# Copyright (C) 2010 - 2011	Dirk Eddelbuettel and Romain Francois
 #
 # This file is part of Rcpp.
 #
@@ -144,6 +144,17 @@ definitions <- function(){
 				  ')
 
 				  ,
+				  "runit_pnf" = list(
+				  signature( x = "numeric" ),
+				  '
+				  NumericVector xx(x) ;
+				  return List::create(_["lowerNoLog"] = pnf( xx, 6.0, 8.0, 0.0, true ),
+									  _["lowerLog"]	  = pnf( xx, 6.0, 8.0, 0.0, true, true ),
+									  _["upperNoLog"] = pnf( xx, 6.0, 8.0, 0.0, false ),
+									  _["upperLog"]	  = pnf( xx, 6.0, 8.0, 0.0, false, true ));
+				  ')
+
+				  ,
 				  "runit_pnorm" = list(signature( x = "numeric" ),
 				  '
 				  NumericVector xx(x) ;
@@ -240,7 +251,7 @@ definitions <- function(){
 
 .setUp <- function(){
 	if( ! exists( ".rcpp.stats", globalenv() ) ){
-		fun <- Rcpp:::compile_unit_tests( 
+		fun <- Rcpp:::compile_unit_tests(
 		    definitions()
 		)
 	    assign( ".rcpp.stats", fun, globalenv() )
@@ -263,9 +274,9 @@ test.stats.dbinom <- function( ){
 	fx <- .rcpp.stats$runit_dbinom
     v <- 1:10
 	checkEquals(fx(v) ,
-                list( 
-                    false = dbinom(v, 10, .5), 
-                    true = dbinom(v, 10, .5, TRUE ) 
+                list(
+                    false = dbinom(v, 10, .5),
+                    true = dbinom(v, 10, .5, TRUE )
                 ), msg = "stats.dbinom" )
 }
 
@@ -288,9 +299,9 @@ test.stats.dgamma <- function( ) {
     fx <- .rcpp.stats$runit_dgamma
     v <- 1:4
     checkEquals(fx(v),
-                list( NoLog = dgamma(v, 1.0, 1.0), 
+                list( NoLog = dgamma(v, 1.0, 1.0),
                       Log = dgamma(v, 1.0, 1.0, log = TRUE ),
-                      Log_noRate = dgamma(v, 1.0, log = TRUE ) 
+                      Log_noRate = dgamma(v, 1.0, log = TRUE )
                 ), msg = "stats.dgamma" )
 }
 
@@ -299,8 +310,8 @@ test.stats.dpois <- function( ){
 	fx <- .rcpp.stats$runit_dpois
     v <- 0:5
 	checkEquals(fx(v) ,
-                list( false = dpois(v, .5), 
-                      true = dpois(v, .5, TRUE ) 
+                list( false = dpois(v, .5),
+                      true = dpois(v, .5, TRUE )
                 ), msg = "stats.dpois" )
 }
 
@@ -308,12 +319,12 @@ test.stats.dnorm <- function( ) {
     fx <- .rcpp.stats$runit_dnorm
     v <- seq(0.0, 1.0, by=0.1)
     checkEquals(fx(v),
-                list( false_noMean_noSd = dnorm(v), 
-                      false_noSd = dnorm(v, 0.0), 
-                      false = dnorm(v, 0.0, 1.0), 
+                list( false_noMean_noSd = dnorm(v),
+                      false_noSd = dnorm(v, 0.0),
+                      false = dnorm(v, 0.0, 1.0),
                       true = dnorm(v, 0.0, 1.0, log=TRUE ),
                       true_noSd = dnorm(v, 0.0, log=TRUE ),
-                      true_noMean_noSd = dnorm(v, log=TRUE ) 
+                      true_noMean_noSd = dnorm(v, log=TRUE )
                 ), msg = "stats.dnorm" )
 }
 
@@ -321,7 +332,7 @@ test.stats.dt <- function( ) {
 	fx <- .rcpp.stats$runit_dt
     v <- seq(0.0, 1.0, by=0.1)
     checkEquals(fx(v),
-                list( false = dt(v, 5), 
+                list( false = dt(v, 5),
                       true = dt(v, 5, log=TRUE ) # NB: need log=TRUE here
                 ), msg = "stats.dt" )
 }
@@ -370,6 +381,18 @@ test.stats.punif <- function( ) {
                      ),
                 msg = "stats.punif" )
     # TODO: also borrow from R's d-p-q-r-tests.R
+}
+
+test.stats.pnf <- function( ) {
+    fx <- .rcpp.stats$runit_pnf
+    v <- (1:9)/10
+    checkEquals(fx(v),
+                list(lowerNoLog = pf(v, 6, 8, lower=TRUE, log=FALSE),
+                     lowerLog   = pf(v, 6, 8, log=TRUE ),
+                     upperNoLog = pf(v, 6, 8, lower=FALSE),
+                     upperLog   = pf(v, 6, 8, lower=FALSE, log=TRUE)
+                     ),
+                msg = "stats.pf" )
 }
 
 test.stats.pgamma <- function( ) {
